<resources>
    <string name="app_name">Acuario</string>
    <string name="btnResumen">Mis Acuarios</string>


    <string name="tituloMisAcuarios">Mis Acuarios</string>
    <string name="btnNuevoAcuario">Nuevo Acuario</string>
    <string name="btnGaleria">Galeria</string>
    <string name="btnEditarAcuario"> Editar Acuario</string>
    <string name="tituloNuevo">Nuevo Acuario</string>
    <string name="tituloEditar">Editar Acuario</string>
    <string name="tituloGaleria">Galeria</string>

    <string name="nombreAcuario">Nombre</string>
    <string name="TipoAgua">Tipo de Agua</string>
    <string name="Forma">Forma</string>
    <string name="Medidas">Medidas</string>
    <string name="Volumen">Volumen</string>
    <string name="btn_Guardar">Guardar</string>
    <string name="btn_Cancelar">Cancelar</string>


    <string name="nombreAcuarioEdit">Nombre</string>
    <string name="TipoAguaEdit">Tipo de Agua</string>
    <string name="FormaEdit">Forma</string>
    <string name="MedidasEdit">Medidas</string>
    <string name="VolumenEdit">Volumen</string>
    <string name="btn_GuardarEdit">Guardar</string>
    <string name="btn_CancelarEdit">Cancelar</string>

    <string name="tituloAcuarioGaleria">Acuario</string>
    <string name="nombreAcuarioGaleria">Nombre</string>
    <string name="fechaGaleria">Fecha</string>
    <string name="observacionesAcuario">Observaciones</string>
    <string name="fotos">Fotos</string>


    <string name="action_settings">Settings</string>
</resources>
