<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ec.edu.epn.acuario.NuevoAcuario"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloNuevo"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.16">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreAcuario"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Escriba aqui el nombre"
            android:layout_weight="0.73" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.17">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TipoAgua"
            android:textSize="20sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbTipoAgua">

        </Spinner>


    </LinearLayout>

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.18">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forma"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/cmbForma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.11">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Medidas"
            android:textSize="20sp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.17">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Volumen"
            android:textSize="20sp"/>

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center"
        android:layout_weight="0.19">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Guardar"
            android:layout_weight="0.20" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Cancelar"
            android:layout_weight="0.14" />


    </LinearLayout>


</LinearLayout>
