<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ec.edu.epn.aquariumchecker.MisAcuarios"
    tools:showIn="@layout/activity_mis_acuarios">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mis Acuarios"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Resumen"
        android:text="@string/btnResumen"
        android:onClick="abrir_Resumenes"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_NuevoAcuario"
        android:text="@string/btnNuevoAcuario"
        android:onClick="abrir_NuevoAcuario"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Galeria"
        android:text="@string/btnGaleria"
        android:onClick="abrir_Galeria"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_EditarAcuario"
        android:text="@string/btnEditarAcuario"
        android:onClick="abrir_EditarAcuario"/>



</LinearLayout>
